finalised bug fix for content-jumping due to scrollbar on responsive screens. responsive styling for cart page.

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,7 @@
 @tailwind utilities;
 
 #root {
-  width: 100%;
   position: relative;
-}
-
-html { /* To prevent scrollbar from pushing content inwards, particularly the header */
   overflow-x: hidden;
 }
 
@@ -21,8 +17,14 @@ html { /* To prevent scrollbar from pushing content inwards, particularly the he
 
 body {
   background-color: #F9EBE0;
+  position: relative;
+}
+
+html,
+body {
   overflow-x: hidden;
   width: 100%;
+  height: 100%;
 }
 
 * {
